--- a/_web-src/scss/theme/_navbar.scss
+++ b/_web-src/scss/theme/_navbar.scss
@@ -17,17 +17,22 @@
     height: 5rem;
   }
   #CollapsingNavbar {
-    background-color: #3c3c3c;
-    margin-left: 19% !important;
-    height: 47px !important;
-    margin-top: 12px !important;
-    width: 100%;
+    background-color: #3c3c3c; //margin-left: 19% !important;
+    height: 47px !important; //margin-top: 5px !important;
+    display: table;
+    margin: 0 auto;
+  }
+  ul {
+    display: table;
+    margin: 0 auto;
+    float: none;
   }
   .alpineLogo {
+    width: 100%;
+    text-align: center;
     color: #ef767a;
     margin-top: 0.4em;
     font-family: brusher;
-    margin-left: 0.6em;
     font-size: 2.8em;
     padding-top: 0px;
     padding-bottom: 0.9em;
@@ -91,6 +96,7 @@
     border-left-width: 0px !important;
   }
   .bookMyStay {
+    align-items: center;
     color: white;
     margin-top: 0.9em;
     margin-right: 1.4em;
@@ -98,7 +104,7 @@
     font-size: 1em;
     float: right;
     background-color: #ef767a;
-    height: 2.7em
+    height: 2.7em;
   }
   a {
     color: white !important;
